--- a/apps/menthol_app/templates/dashboard.html
+++ b/apps/menthol_app/templates/dashboard.html
@@ -9,6 +9,7 @@
 <body>
     <div>
         <h2>Welcome to Menthol! (definitely not a Mint knockoff)</h2>
+        <h1>Testing the justin branch</h1>
     </div>
 </body>
 </html>
