--- a/apps/menthol_app/templates/dashboard.html
+++ b/apps/menthol_app/templates/dashboard.html
@@ -10,6 +10,7 @@
     <div>
         <h2>Welcome to Menthol! (definitely not a Mint knockoff)</h2>
         <h1>Testing the justin branch</h1>
+        <p>second change made</p>
     </div>
 </body>
 </html>
