--- a/apps/menthol_app/templates/menthol_app/all_account.html
+++ b/apps/menthol_app/templates/menthol_app/all_account.html
@@ -5,18 +5,134 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Menthol - All Accounts</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
     <div id="container">
-        <div id="navigation">
-            <h2>Good Morning {{user.first_name}}!</h2>
-            <a href="/dashboard">Dashboard</a>
-            <a href="/logout">Logout</a>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">
+            <img src="http://reliefor.com/wp-content/uploads/2015/10/icon-menthol-300px.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            Menthol</a>                  
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Navigation
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Accounts and Budgets</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Payments and Transfers</a>
+                        </div>
+                    </li>
+                </ul>
+                <div class="form-inline my-2 my-lg-0">
+                    <a class="nav-link disabled" href="#">Logged in as {{ user.first_name }}</a>
+                    <a class="nav-link" href="#">Logout</a>
+                </div>
+            </div>
+        </nav>
         <div id="main_wrapper">
-            <!--Table goes here-->
-            <a href="/accounts/new">Add new account</a> <!--Button? -Will-->
-        </div>
+                <div class="card">
+                    <h5 class="card-header">Accounts Overview</h5>
+                    <div class="card-body">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Category</th>
+                                    <th scope="col">Balance</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for account in accounts%}
+                                <tr>{{ account.name }}</tr>
+                                <tr>{{ account.category }}</tr>
+                                <tr>{{ account.acc_balance }}</tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="accordion" id="accordionExample275">
+                    <div class="card z-depth-0 bordered">
+                        <div class="card-header" id="headingOne2">
+                        <h5 class="mb-0">
+                            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseOne2"
+                            aria-expanded="true" aria-controls="collapseOne2">
+                            Add New Account
+                            </button>
+                        </h5>
+                        </div>
+                        <div id="collapseOne2" class="collapse" aria-labelledby="headingOne2"
+                        data-parent="#accordionExample275">
+                        <div class="card-body">
+                            <form action="/accounts/add/processing" method="POST">
+                                {% csrf_token %}
+                                <label>Account Type: </label>
+                                <select name="category">
+                                    <option>Select Account Type</option>
+                                    <option value="checking">Checking</option>
+                                    <option value="saving">Saving</option>
+                                    <option value="credit_card">Credit Card</option>
+                                </select>
+                                <div class="form-group">
+                                    <label>Account Name:</label>
+                                    <input type="text" name="name">
+                                </div>
+                                <div class="form-group">
+                                </div>
+                                <div class="form-group">
+                                    <label>Initial Balance: $</label>
+                                    <input type="number" name="acc_balance">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <h5 class="card-header">Expenses Overview</h5>
+                    <div class="card-body">
+                            <div class="progress">
+                                <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">EXPENSE NAME</div>
+                            </div>
+                    </div>
+                </div>
+                <div class="accordion" id="accordionExample275">
+                    <div class="card z-depth-0 bordered">
+                        <div class="card-header" id="headingExp">
+                            <h5 class="mb-0">
+                            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExp"
+                            aria-expanded="true" aria-controls="collapseExp">
+                            Add New Expense
+                            </button>
+                            </h5>
+                        </div>
+                        <div id="collapseExp" class="collapse" aria-labelledby="headingExp"
+                        data-parent="#accordionExample275">
+                        <div class="card-body">
+                            <form action="/accounts/add/processing" method="POST">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <label>Expense Name:</label>
+                                    <input type="text" name="name">
+                                </div>
+                                <div class="form-group">
+                                    <label>Budgeted Amount: $</label>
+                                    <input type="number" name="budget">
+                                </div>
+                            </form>
+                        </div>
+                        </div>
+                    </div>
+                </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
