--- a/apps/menthol_app/templates/menthol_app/dashboard.html
+++ b/apps/menthol_app/templates/menthol_app/dashboard.html
@@ -89,7 +89,7 @@
                 </tbody>
                 </table>
                 <div style="margin-left: 5%;">
-                    <a href="/transactions" class="btn btn-primary">View All/Add Transaction</a>
+                    <a href="/payments" class="btn btn-primary">View All/Add Transaction</a>
                 </div>                    
             </div>
         </div>
