--- a/apps/menthol_app/templates/menthol_app/all_account.html
+++ b/apps/menthol_app/templates/menthol_app/all_account.html
@@ -6,33 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Menthol - All Accounts</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'menthol_app/dashboard.css' %}">
 </head>
 <body>
-    <div id="container">
+    <div style="background-color:black;" id="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/dashboard">
             <img src="http://reliefor.com/wp-content/uploads/2015/10/icon-menthol-300px.png" width="30" height="30" class="d-inline-block align-top" alt="">
-            Menthol</a>                  
+                Menthol</a>                  
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="/dashboard">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Navigation
+                            Navigation
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Accounts and Budgets</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Payments and Transfers</a>
-                        </div>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/accounts">Accounts and Budgets</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/payments">Payments and Transfers</a>
+                    </div>
                     </li>
                 </ul>
-                <div class="form-inline my-2 my-lg-0">
-                    <a class="nav-link disabled" href="#">Logged in as {{ user.first_name }}</a>
-                    <a class="nav-link" href="#">Logout</a>
-                </div>
+            <div class="form-inline my-2 my-lg-0">
+                <a class="nav-link disabled" href="#">Logged in as {{user.first_name}} {{user.last_name}}</a>
+                <a class="nav-link" href="/logout">Logout</a>
+            </div>
             </div>
         </nav>
         <div id="main_wrapper">
@@ -102,9 +104,19 @@
                 <div class="card">
                     <h5 class="card-header">Expenses Overview</h5>
                     <div class="card-body">
-                            <div class="progress">
-                                <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">EXPENSE NAME</div>
+                            <div style="height:30px;" class="progress">
+                                <div style="width:45%;"class="progress-bar bg-success progress-bar-striped" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">EXPENSE NAME</div>
                             </div>
+                    </div>
+                    <div class="card-body">
+                        <div style="height:30px;" class="progress">
+                            <div style="width:75%;" class="progress-bar bg-success progress-bar-striped" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">EXPENSE NAME</div>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <div style="height:30px;" class="progress">
+                            <div style="width:25%;" class="progress-bar bg-success progress-bar-striped" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">EXPENSE NAME</div>
+                        </div>
                     </div>
                 </div>
                 <div class="accordion" id="accordionExample275">
