--- a/apps/login_reg/static/login_reg/css/signup.css
+++ b/apps/login_reg/static/login_reg/css/signup.css
@@ -3,8 +3,9 @@
 } */
 
 #container{
-    width: 740px;
-    margin: 30px auto;
+    margin: 0 auto;
+    background-image: radial-gradient(#6699CC, #5F5F5F);
+    padding: 2.5%;
 }
 
 .nav{
@@ -26,7 +27,7 @@ form{
 
 h1{
     text-align: center;
-    margin-bottom: 100px;
+    margin-bottom: 30px;
 }
 
 #logout{
